--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: CI
 
 on:
+  schedule:
+    - cron: '*/15 * * * *'
+    - cron: '0 3 * * SUN'
   push:
     branches:["main"]
   pull_request:
