Update2 main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,15 @@ on:
   pull_request:
     branches:["main"]
   workflow_dispatch:
+    inputs:
+      loglevel:
+        description: 'Log Level'
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags'
+    repository_dispatch:
+      type: [opened, deleted]
 
 jobs:
   build:
